syntax = "proto3";

package sf.solana.dex.trades.v1;

message Output {
    repeated TradeData data = 1;
}

message TradeData {
    int64 block_time = 2;
    uint64 block_slot = 3;
    string tx_id = 4;
    string signer = 5;
    string pool_address = 6;
    string base_mint = 7;
    string quote_mint = 8;
    string base_vault = 9;
    string quote_vault = 10;
    int64 base_amount = 11;
    int64 quote_amount = 12;
    uint32 base_decimals = 13;
    uint32 quote_decimals = 14;
    bool is_inner_instruction = 15;
    uint32 instruction_index = 16;
    string instruction_type = 17;
    uint32 inner_instruxtion_index = 18;
    string outer_program = 19;
    string inner_program = 20;
    uint64 txn_fee_lamports = 21;
}